--- a/src/app/main-content/competences/competences.component.html
+++ b/src/app/main-content/competences/competences.component.html
@@ -11,7 +11,7 @@
             <div class="animation">
                 <img class="learning_sun rotating" [ngClass]="{'stop_rotating' : showFurtherSkills }" src="./assets/animation_wheels/orange_sun.svg" alt="">
                 <img (mouseover)="showFurtherSkills = true" (mouseleave)="showFurtherSkills = false" class="learning_icon" src="./assets/emojis/learning.svg" alt="">
-            </div>'
+            </div>
             <div class="further_skills" *ngIf="showFurtherSkills" [ngClass]="{'further_skills_visible' : showFurtherSkills}">
                 <h5>{{ 'competencen.further_skills.h5' | translate }}</h5>
                 <p>{{ 'competencen.further_skills.p' | translate }}</p>
