--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -1,8 +1,8 @@
 <div class="main_content">
-<!-- <app-above-the-folder id="portfolio"></app-above-the-folder> -->
-<app-about-me id="about"></app-about-me>
-<!-- <app-competences id="competences"></app-competences>
-<app-work id="work"></app-work>
+<!-- <app-above-the-folder id="portfolio"></app-above-the-folder>
+<app-about-me id="about"></app-about-me> -->
+<app-competences id="competences"></app-competences>
+<!-- <app-work id="work"></app-work>
 <app-reviews id="references"></app-reviews>
 <app-contact id="contact"></app-contact> -->
 </div>
