--- a/src/app/main-content/competences/competences.component.html
+++ b/src/app/main-content/competences/competences.component.html
@@ -13,7 +13,10 @@
                 <img (mouseover)="showFurtherSkills = true" (mouseleave)="showFurtherSkills = false" class="learning_icon" src="./assets/emojis/learning.svg" alt="">
             </div>
             <div class="further_skills" *ngIf="showFurtherSkills" [ngClass]="{'further_skills_visible' : showFurtherSkills}">
-                <h5>{{ 'competencen.further_skills.h5' | translate }}</h5>
+                <div class="skills_title">
+                    <h5>{{ 'competencen.further_skills.h5' | translate }}</h5>
+                    <img src="./assets/menu_icons/close_white.svg" alt="closing icon">
+                </div>
                 <p>{{ 'competencen.further_skills.p' | translate }}</p>
                 <img src="./assets/frontend_icons/python_logo.svg" alt="python logo">
             </div>
