--- a/src/app/main-content/competences/competences.component.scss
+++ b/src/app/main-content/competences/competences.component.scss
@@ -114,21 +114,32 @@ h2 {
     justify-content: center;
     gap: 8px;
     width: 67%;
-    text-align: center;
     align-self: center;
     top: 16px;
     z-index: 30;
-    > h5 {
-        font-size: 24px;
-        font-weight: 700;
-        font-family: 'Quicksand';
-    }
     >p {
+        text-align: center;
         font-size: 16px;
         font-weight: 400;
         font-family: 'Quicksand';
     }
     >img {height: 40px;}
+}
+
+.skills_title {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    >img {
+        display: none;
+    }
+    > h5 {
+        text-align: center;
+        font-size: 24px;
+        font-weight: 700;
+        font-family: 'Quicksand';
+    }
 }
 
 @keyframes slide_from_bottom {
@@ -215,6 +226,7 @@ app-navdots {
 }
 
 @media(max-width: 900px) {
+    .skills_title img {display: flex; align-self: flex-start;}
     app-navdots {display: none;}
 }
 
