--- a/src/app/main-content/competences/competences.component.html
+++ b/src/app/main-content/competences/competences.component.html
@@ -7,6 +7,7 @@
             <h2 class="fontEckzar">{{ 'competencen.h2' | translate }}</h2>
             <div class="description fontQuicksand">
                 {{ 'competencen.text' | translate }}
+                <span class="vanishable">{{ 'competencen.text_vanishable' | translate }}</span>
             </div>
             <div class="animation">
                 <img class="learning_sun rotating" [ngClass]="{'stop_rotating' : showFurtherSkills }" src="./assets/animation_wheels/orange_sun.svg" alt="">
