--- a/src/app/main-content/reviews/first-review/first-review.component.scss
+++ b/src/app/main-content/reviews/first-review/first-review.component.scss
@@ -53,3 +53,7 @@ img {
 @media (max-width: 710px) {
     .border {width: 70vw; padding: 8px; gap: 6px;}
 }
+
+@media (max-width: 550px) {
+    .box {scroll-snap-align: center;}
+}
