--- a/src/app/main-content/reviews/reviews.component.scss
+++ b/src/app/main-content/reviews/reviews.component.scss
@@ -89,13 +89,18 @@ app-navdots {
     .nr_two {align-self: center;}
     .nr_three {align-self: center;}
     .boxes {padding-right: 0;}
-    app-first-review {width: 100%;}
-    app-second-review {width: 100%;}
-    app-third-review {width: 100%;}
+}
+
+@media (max-width: 900px) {
+    app-navdots {display: none;}
 }
 
 @media (max-width: 754px) {
     .content h2 {font-size: 36px; line-height: 40px;}
+}
+
+@media(max-width: 700px) {
+    .content {padding-right: 16px; padding-left: 16px;}
 }
 
 @media (max-width: 710px) {
@@ -103,7 +108,41 @@ app-navdots {
     .boxes {gap: 16px;}
 }
 
+@media(max-width: 550px) {
+    //hier das scrollbar machen (nach rechts)
+    .boxes {
+        flex-direction: row; 
+        overflow-x: auto; 
+        scroll-snap-type: x mandatory;
+        width: 100%;
+    }
+    .nr_one, .nr_two, .nr_three {width: 100%; flex-shrink: 0;}
+    app-first-review {width: 100%; scroll-snap-align: center;}
+    app-second-review {width: 100%; scroll-snap-align: center;}
+    app-third-review {width: 100%; scroll-snap-align: center;}
+/* width */
+::-webkit-scrollbar {
+    width: 5px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px #679AAC;
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #f8f7e5; 
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #ff834f;
+  }
+}
+
 @media (max-width: 450px) {
-    .content {padding-right: 16px; padding-left: 16px;}
-    .scroll_bar {display: none;}
+
 }
