--- a/src/app/main-content/reviews/third-review/third-review.component.scss
+++ b/src/app/main-content/reviews/third-review/third-review.component.scss
@@ -57,3 +57,7 @@ img {
 @media (max-width: 450px) {
     .content {padding-right: 16px; padding-left: 16px;}
 }
+
+@media (max-width: 550px) {
+    .box {scroll-snap-align: center;}
+}
