--- a/src/app/main-content/reviews/second-review/second-review.component.scss
+++ b/src/app/main-content/reviews/second-review/second-review.component.scss
@@ -38,22 +38,33 @@ img {
     top: 16px;
 }
 
-@media (max-width: 1074px) {
+@media (max-width: 1255px) {
     .link {font-size: 18px;}
+}
+
+@media (max-width: 1074px) {
     .name {font-size: 16px;}
-    .description_text {font-size: 15px;}
+}
+
+@media(max-width: 1108px) {
+    .box {gap: 8px;}
 }
 
 @media (max-width: 988px) {
-    .border { width: 80vw; padding: 16px; gap: 8px;}
-    .box {gap: 0;}
-    .hover_wheel {height: 20px;}
+    .box {scroll-snap-align: center; gap: 20px;}
+    .link {font-size: 22px;}
+    .name {font-size: 18px;}
 }
 
-@media (max-width: 710px) {
-    .border {width: 70vw; padding: 8px; gap: 6px;}
+@media (max-width: 700px) {
+    .box {justify-content: center; align-items: center;}
 }
 
-@media (max-width: 550px) {
-    .box {scroll-snap-align: center;}
+@media (max-width: 450px) {
+    .content {padding-right: 16px; padding-left: 16px;}
+}
+
+@media(max-width: 340px) {
+    .border {gap: 16px;}
+    .link {font-size: 16px;} 
 }
