responsiveness for bigger screens in contact section + all common navbars up 550px deleted

--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -227,6 +227,10 @@ app-navdots {
     .text_over {width: 120%;}
 }
 
+@media (max-width: 550px) {
+    app-common-navbar {display: none;}
+}
+
 @media (max-width: 570px) {
     .left_side >img {
         width: 240px; 
