--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -3,6 +3,6 @@
 <app-about-me id="about"></app-about-me>
 <app-competences id="competences"></app-competences> -->
 <!-- <app-work id="work"></app-work> -->
-<app-reviews id="references"></app-reviews>
-<!-- <app-contact id="contact"></app-contact> -->
+<!-- <app-reviews id="references"></app-reviews> -->
+<app-contact id="contact"></app-contact>
 <!-- </div> -->
