--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -14,8 +14,9 @@
                 <p>{{ 'contact.text2' | translate }}</p>
             </div>
             <div class="gearwheels">
-                <img class="orange_sun rotate_anticlockwise" src="./assets/animation_wheels/animation_wheel_orange.svg" alt="orange rotating wheel">
-                <img class="blue_sun rotating" src="./assets/animation_wheels/animation_wheel_blue.svg" alt="blue rotating wheel">
+                <img class="blue_sun rotate_anticlockwise" src="./assets/animation_wheels/animation_wheel_blue.svg" alt="blue rotating wheel">
+                <img class="orange_sun rotating" src="./assets/animation_wheels/animation_wheel_orange.svg" alt="orange rotating wheel">
+                
             </div>
         </div>
         <div class="content_right">
@@ -23,10 +24,11 @@
                 <app-formular></app-formular>
             </div>
         </div>
-    </div>
         <div class="scroll_bar">
             <app-navdots [whiteColor]="isWhite" [sectionIndex]="indexOfThisSection"></app-navdots>
         </div>
+    </div>
+        
     </div>    
     <app-footer></app-footer>
 </section>
