--- a/src/app/main-content/work/work.component.scss
+++ b/src/app/main-content/work/work.component.scss
@@ -238,6 +238,10 @@ h5 {
     .main {margin-right: 16px;}
 }
 
+@media(max-width: 550px) {
+    app-common-navbar {display: none;}
+}
+
 @media (max-width: 530px) {
     .btn {margin-top: 0;
         margin-bottom: 0;
