responsiveness for mobile in contact section

--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -10,7 +10,8 @@
                 <h2 class="fontEckzar">{{ 'contact.h2_part3' | translate }}</h2>
             </div>
             <div>
-                <p class="colorize">{{ 'contact.text1' | translate }}</p><br>
+                <p class="colorize">{{ 'contact.text1' | translate }}</p>
+                <p class="vanishable"></p>
                 <p>{{ 'contact.text2' | translate }}</p>
             </div>
             <div class="gearwheels">
