--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -41,7 +41,6 @@ a {
         padding: 0;
         padding-bottom: 16px;
         flex-direction: column;
-       // gap: 16px;
     }
     .name_copyright .oneThird {margin-bottom: 8px;}
     .links.oneThird {width: 100%;}
@@ -54,12 +53,18 @@ a {
 @media (max-width: 550px) {
     .links {justify-content: space-between;}
     .links {padding: 0 16px;}
+    .portfolio_footer {padding-bottom: 173px;}
 }
 
 @media (max-width: 520px) {
     input[type=text] {padding: 8px;}
 }
 
-@media (ax-width: 450px) {
+@media (max-width: 450px) {
     .oneThird {justify-content: space-between;}
+    .portfolio_footer {padding-bottom: 153px;}
+}
+
+@media (max-width: 365px) {
+    .portfolio_footer {padding-bottom: 132px;}
 }
