navbars deleted at 550 width

--- a/src/app/shared/common-navbar/common-navbar.component.html
+++ b/src/app/shared/common-navbar/common-navbar.component.html
@@ -27,7 +27,7 @@
         <div class="links_list">
             <a (mouseenter)="showWheelAbout = true" (mouseleave)="showWheelAbout = false" href="#about" (click)="closeMenuTab()">@if(showWheelAbout){<img src="./assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}About me</a>
             <a (mouseenter)="showWheelSkills = true" (mouseleave)="showWheelSkills = false" href="#competences" (click)="closeMenuTab()">@if(showWheelSkills){<img src="./assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}Skills</a>
-            <a (mouseenter)="showWheelPortfolio = true" (mouseleave)="showWheelPortfolio = false" href="#my_work" (click)="closeMenuTab()">@if(showWheelPortfolio){<img src="./assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}Portfolio</a>
+            <a (mouseenter)="showWheelPortfolio = true" (mouseleave)="showWheelPortfolio = false" href="#work" (click)="closeMenuTab()">@if(showWheelPortfolio){<img src="./assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}Portfolio</a>
             <a (mouseenter)="showWheelRef = true" (mouseleave)="showWheelRef = false" href="#references" (click)="closeMenuTab()">@if(showWheelRef){<img src="./assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}References</a>
             <a (mouseenter)="showWheelContact = true" (mouseleave)="showWheelContact = false" href="#contact" (click)="closeMenuTab()">@if(showWheelContact){<img src="./assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}Contact me</a>
         </div>
