--- a/src/app/main-content/above-the-folder/above-the-folder.component.scss
+++ b/src/app/main-content/above-the-folder/above-the-folder.component.scss
@@ -171,6 +171,10 @@ app-navdots {
     .atf_left {gap: 8px;}
 }
 
+@media(max-width: 550px) {
+    app-main-navbar {display: none;}
+}
+
 @media (max-width: 525px) {
     .content {justify-content: space-between;}
     .my_foto {height: 69%;}
