--- a/src/app/shared/common-navbar/common-navbar.component.scss
+++ b/src/app/shared/common-navbar/common-navbar.component.scss
@@ -122,6 +122,7 @@
 
 @media (max-width: 700px) {
     .menu {>svg{height: 35px;}}
+    .navbar {padding-left: 16px; padding-right: 16px;}
 }
 
 @media(max-width: 450px){
