--- a/src/app/main-content/above-the-folder/above-the-folder.component.scss
+++ b/src/app/main-content/above-the-folder/above-the-folder.component.scss
@@ -270,6 +270,7 @@ app-navdots {
 @media screen and (width: 375px) and (height: 667px) {
     .my_foto {right: 44px;
         height: 61%;}
+    .atf_right {height: 100vh;}
 }
 
 //*****iPad mini**************************************
